--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ uiTextGoogleFonts = "1.6.7"
 material = "1.10.0"
 appcompat = "1.6.1"
 constraintlayout = "2.1.4"
+daggerHilt = "2.44"
 activity = "1.8.0"
 
 [libraries]
@@ -44,11 +45,12 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
-
+dagger-hilt = { group = "com.google.dagger", name  = "hilt-android", version.ref = "daggerHilt" }
+dagger-hilt-compiler = { group = "com.google.dagger", name  = "hilt-android-compiler", version.ref = "daggerHilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-devtools-kps = { id = "com.google.devtools.ksp", version.ref = "devtoolsKps" }
-
+google-devtools-kps = { id = "com.google.devtools.ksp", version.ref = "devtoolsKps" }
+google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
